k8s/cart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
    - name: http
      port: 80
      targetPort: http
